# uflib

./: CMakeLists.txt  README.md
cmake/: doxygen.cmake  uflibConfig.cmake.in  uflib_config.h.cmake.in  valgrind.cmake
doxygen/: Doxyfile.in
include/uflib/: file_info_type.h  main_types.h  open_file_type.h  simple_timer_type.h  standard_c_includes.h  standard_defs.h  standard_net_includes.h  standard_ssl_includes.h  standard_valgrind_includes.h  tokeniser.h  ufsrvuid.h  utils.h  utils_base64.h  utils_bits.h  utils_crypto.h  utils_file.h  utils_hex.h  utils_str.h  utils_time.h  utils_urls.h  uuid_type.h
include/uflib/K12/: KangarooTwelve.h  KeccakP-1600-SnP.h
include/uflib/adt/: adt_doubly_linkedlist.h  adt_doubly_linkedlist_type.h  adt_hopscotch_hashtable.h  adt_hopscotch_hashtable_type.h  adt_lamport_queue.h  adt_minheap.h  adt_minheap_type.h  adt_mpsc_queue.h  adt_mpsc_queue_type.h  adt_queue.h
include/uflib/db/: db_op_descriptor_type.h  dp_ops.h
include/uflib/scheduled_jobs/: scheduled_jobs.h  scheduled_jobs_type.h
src/: CMakeLists.txt  config.h  tokeniser.c  ufsrvuid.c  utils.c  utils_base32.c  utils_base64.c  utils_bits.c  utils_crypto.c  utils_file.c  utils_hex.c  utils_str.c  utils_time.c  utils_url.c  version.c  version.c.sh  version.h
src/K12/: CMakeLists.txt  KangarooTwelve.c
src/K12/Optimized64/: KeccakP-1600-AVX512-plainC.c  KeccakP-1600-opt64.c  KeccakP-1600-runtimeDispatch.c  KeccakP-1600-timesN-AVX2.c  KeccakP-1600-timesN-AVX512.c  KeccakP-1600-timesN-SSSE3.c
src/adt/: CMakeLists.txt  adt_doubly_linkedlist.c  adt_hopscotch_hashtable.c  adt_lamport_queue.c  adt_linkedlist.c  adt_minheap.c  adt_mpsc_queue.c  adt_queue.c
src/db/: CMakeLists.txt  db_abstraction.c  db_mysql.c  db_ops.c
src/lzf/: CMakeLists.txt
src/protobuf-c/: CMakeLists.txt  protobuf-c.c
src/scheduled_jobs/: CMakeLists.txt  scheduled_jobs.c
test/: CMakeLists.txt  main.cpp  ufsrvuid.cpp
